Minor: removed some warnings on generics